--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -10,7 +10,7 @@
   <%end%>
 
 
-<%= form_for [@house, @student] do |f| %>
+<%= form_for [@student] do |f| %>
 
   <%= f.label :name %>
   <%= f.text_field :name %>
