--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @house.name %></h1>
 <% @house.students.each do |student| %>
-<div class="student">
-  <h2><%= student.name %></h2>
+<div class="/houses/<%=@house.id%>">
+  <h2><%= link_to student.name, student_path(student) %></h2>
   <%= image_tag student.img_url %>
 </div>
 <% end %>
