--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Here are the students</h1>
 <% @students.each do |student| %>
   <div>
-    <%= link_to student, students_path(student) %> - <%= student.house %>
+<h2><%= link_to student.name, student_path(student) %> - <%= link_to student.house.name, house_path(student.house.id) %></h2>
 <% end %>
   </div>
