hogwarts added school pic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <h2><a href="/houses">View Houses</a> | <a href="/students">View Students</a> | <a href="/new_student">Enroll</a></h2>
   </nav>
 
+  <img src="http://fc02.deviantart.net/fs71/f/2012/051/9/d/hogwarts_crest_by_kieranfrancis-d4qg6i1.png">
   <%= yield %>
 
 </body>
